overflow fix?v3

--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,7 @@ body {
   background-color: #eceadd;
   overflow-x: hidden;
 }
+
+html{
+  overflow-x: hidden;
+}
